--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}/cmd",
+            "preLaunchTask": "Run CompileDaemon",
             "env": {},
             "args": []
         }
