feat: read args

--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  args_bin = []
+  args_bin = ["--database=postgres"]
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ./cmd/"
   delay = 1000
